tests/tests/ui/invalid_string_with_integer_type.stderr
error: Invalid column type 'integer(4)' for field 'name: String'
 --> tests/ui/invalid_string_with_integer_type.rs:9:5
  |
9 |     #[column(type = integer(4))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: String fields are compatible with: text, varchar(n)
  = help: Did you mean: #[column(type = text)]?
